--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   another_flushbar: ^1.10.29
   carousel_slider: ^4.1.1
   font_awesome_flutter: ^10.1.0
+  dotted_line: ^3.1.0
 
 dev_dependencies:
   flutter_test:
