--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
-#Business Login
+#Business Logic
   bloc: ^8.0.3
   flutter_bloc:
 #Data Api
@@ -52,7 +50,7 @@ dependencies:
 #local Data
   shared_preferences: ^2.0.15
   cached_network_image: ^3.2.1
-
+#others
   cupertino_icons:
   flutter_svg:
   country_code_picker:
@@ -65,7 +63,9 @@ dependencies:
   #Payment
   flutter_stripe: ^4.0.0
   flutter_credit_card: ^3.0.2
-
+  #Location
+  geocoding: ^2.0.4
+  geolocator: ^9.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
